--- a/DatingApp.API/DatingApp.API/appsettings.json
+++ b/DatingApp.API/DatingApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "super secret key"
+  },
   "ConnectionStrings": {
     "Defaultconnection": "Data Source=DatingApp.db"
   },
