--- a/DatingApp.API/DatingApp.API/appsettings.json
+++ b/DatingApp.API/DatingApp.API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dcphoto",
+    "ApiKey": "749449275937234",
+    "ApiSecret": "jrQrsksbBC1YQsYAuwJjWxAJDKY"
+  }
 }
