--- a/DatingApp.API/DatingApp.API/appsettings.json
+++ b/DatingApp.API/DatingApp.API/appsettings.json
@@ -3,7 +3,7 @@
     "Token": "super secret key"
   },
   "ConnectionStrings": {
-    "Defaultconnection": "Data Source=DatingApp.db"
+    "Defaultconnection": "Server=localhost; Database=datingApp; Uid=appuser; Pwd=LangFord"
   },
   "Logging": {
     "LogLevel": {
